# slg

./: CMakeLists.txt  build.bat
include/: args.h
include/args/: args.h
include/preparation/: preparation.h
src/: main.cpp
src/args/: args.cpp
src/preparation/: preparation.cpp
